English translation of zh-cn version

--- a/source/_posts/设计模式.md
+++ b/source/_posts/设计模式.md
@@ -1,27 +1,27 @@
 ---
-title: 设计模式总结
+title: Summary of Design Patterns
 date: 2024-08-26 16:51:40
 tags:
-  - 设计模式
+  - Design Patterns
 categories:
-  - 设计模式
+  - Design Patterns
 cover: https://pics.findfuns.org/design-pattern.png
 ---
 
-### 设计模式
+### Design Patterns
 
-#### 装饰器模式
+#### Decorator Pattern
 
-装饰器模式（Decorator Pattern）是一种结构型设计模式，它允许你动态地为对象添加新的行为，而不改变其结构或影响其他对象。这种模式通过将对象放入一个“包装器”（即装饰器对象）中，以便在保持原始对象类型不变的情况下，扩展或修改其行为。
+The Decorator Pattern is a structural design pattern that allows you to dynamically add new behavior to an object without altering its structure or affecting other objects. This pattern works by wrapping the original object inside a “decorator” object, enabling behavior extension while keeping the original object’s type unchanged.
 
-- **对象组合**：装饰器模式依赖于对象组合（composition），而不是继承（inheritance）。你可以将一个对象嵌套在另一个对象中，从而添加额外的功能。
-- **遵循接口**：装饰器和被装饰对象通常都实现相同的接口或继承相同的父类，因此可以互换使用。
-- **动态扩展**：装饰器模式可以在运行时为对象添加新的功能，而不像继承那样在编译时就固定了行为。
+- **Object Composition**: The Decorator Pattern relies on composition rather than inheritance. You wrap one object inside another to add additional functionality.
+- **Same Interface**: Both the decorator and the decorated object usually implement the same interface or inherit from the same parent class, making them interchangeable.
+- **Dynamic Extension**: New functionality can be added at runtime, unlike inheritance, where behavior is fixed at compile time.
 
-下面是一个装饰器模式的示例代码
+Below is a simple example of the Decorator Pattern:
 
 ```java
-// 咖啡的基础接口
+// Base interface for coffee
 interface Coffee {
     String getDescription();
     double getCost();
@@ -29,7 +29,7 @@ interface Coffee {
 ```
 
 ```java
-// 具体的基础咖啡实现(被修饰的对象)
+// Concrete base coffee implementation (decorated object)
 class SimpleCoffee implements Coffee {
     @Override
     public String getDescription() {
@@ -38,13 +38,13 @@ class SimpleCoffee implements Coffee {
 
     @Override
     public double getCost() {
-        return 5.0; // 基础咖啡的价格
+        return 5.0; // Base price
     }
 }
 ```
 
 ```java
-// 咖啡装饰器基类(装饰器的抽象类)
+// Abstract decorator class
 abstract class CoffeeDecorator implements Coffee {
     protected Coffee decoratedCoffee;
 
@@ -65,7 +65,7 @@ abstract class CoffeeDecorator implements Coffee {
 ```
 
 ```java
-// 牛奶装饰器(装饰器的实现类)
+// Milk decorator (concrete decorator)
 class MilkDecorator extends CoffeeDecorator {
     public MilkDecorator(Coffee coffee) {
         super(coffee);
@@ -78,13 +78,13 @@ class MilkDecorator extends CoffeeDecorator {
 
     @Override
     public double getCost() {
-        return decoratedCoffee.getCost() + 1.5; // 加牛奶的费用
+        return decoratedCoffee.getCost() + 1.5; // Additional cost for milk
     }
 }
 ```
 
 ```java
-// 糖装饰器(装饰器的实现类)
+// Sugar decorator (concrete decorator)
 class SugarDecorator extends CoffeeDecorator {
     public SugarDecorator(Coffee coffee) {
         super(coffee);
@@ -97,29 +97,29 @@ class SugarDecorator extends CoffeeDecorator {
 
     @Override
     public double getCost() {
-        return decoratedCoffee.getCost() + 0.5; // 加糖的费用
+        return decoratedCoffee.getCost() + 0.5; // Additional cost for sugar
     }
 }
 ```
 
 ```java
-// 主程序
+// Main program
 public class CoffeeShop {
     public static void main(String[] args) {
-        // 创建一个基础咖啡
+        // Create base coffee
         Coffee coffee = new SimpleCoffee();
 
-        // 加牛奶
+        // Add milk
         coffee = new MilkDecorator(coffee);
 
-        // 加糖
+        // Add sugar
         coffee = new SugarDecorator(coffee);
 
-        // 输出描述和价格
-        System.out.println("Description: " + coffee.getDescription()); 
-      	// Description: Simple Coffee, Milk, Sugar
+        // Output description and price
+        System.out.println("Description: " + coffee.getDescription());
+        // Description: Simple Coffee, Milk, Sugar
         System.out.println("Cost: $" + coffee.getCost());
-      	// Cost: $7.0
+        // Cost: $7.0
     }
 }
 ```
@@ -128,32 +128,37 @@ UML
 
 <img src="https://pics.findfuns.org/Decorator.png" alt="DecoratorUML" style="zoom:33%;" />
 
-**summary**
+**Summary**
 
-被修饰的是一个接口（coffee）的实现类（SimpleCoffee），装饰类的基类是`CoffeeDecorator`，两个装饰器分别是`MilkDecorator`和`SugarDecorator`。
+The decorated object is the implementation class `SimpleCoffee` of the `Coffee` interface.  
+The abstract decorator base class is `CoffeeDecorator`, and the two concrete decorators are `MilkDecorator` and `SugarDecorator`.
 
-在这个场景下，`MilkDecorator`和`SugarDecorator`装饰了`SimpleCoffee`，扩展了它的功能而且并没有改变被修饰类的结构和继承关系。
+In this scenario, `MilkDecorator` and `SugarDecorator` decorate `SimpleCoffee`, extending its functionality without modifying its structure or inheritance hierarchy.
 
-#### 适配器模式
+---
 
-适配器模式（Adapter Pattern）是一种结构型设计模式，它用于将一个类的接口转换成客户期望的另一个接口，使得原本由于接口不兼容而不能一起工作的类可以协同工作。适配器模式特别有用在你想复用一些现有的类，但它们的接口不符合你的需求时。
+#### Adapter Pattern
 
-- **接口转换**：适配器模式的核心是接口转换，它通过引入一个适配器类，把现有类的接口转化为客户所期望的接口。
-- **类适配器与对象适配器**：
-  - **类适配器**：使用继承来实现适配器功能。
-  - **对象适配器**：使用组合来实现适配器功能，更加灵活，因为它不依赖于具体的实现而是依赖于接口。
+The Adapter Pattern is a structural design pattern that converts the interface of a class into another interface that clients expect. It allows classes with incompatible interfaces to work together.
 
-下面是一个适配器模式的示例代码
+This pattern is particularly useful when you want to reuse existing classes, but their interfaces do not match your current requirements.
+
+- **Interface Conversion**: The core of the Adapter Pattern is converting one interface into another expected by the client.
+- **Class Adapter vs Object Adapter**:
+    - **Class Adapter**: Uses inheritance to adapt functionality.
+    - **Object Adapter**: Uses composition to adapt functionality. It is more flexible because it depends on interfaces rather than concrete implementations.
+
+Example:
 
 ```java
-// 目标接口 - 电源插座
+// Target interface - Power socket
 interface PowerSocket {
     void plugIn();
 }
 ```
 
 ```java
-// 需要适配的旧插头
+// Existing incompatible class
 class OldPlug {
     void connect() {
         System.out.println("Old plug connected.");
@@ -162,7 +167,7 @@ class OldPlug {
 ```
 
 ```java
-// 适配器 - 将旧插头适配到电源插座接口
+// Adapter class
 class PlugAdapter implements PowerSocket {
     private OldPlug oldPlug;
 
@@ -178,12 +183,12 @@ class PlugAdapter implements PowerSocket {
 ```
 
 ```java
-// 客户端代码
+// Client code
 public class AdapterPatternExample {
     public static void main(String[] args) {
-        OldPlug oldPlug = new OldPlug();  // 创建一个旧插头
-        PowerSocket adapter = new PlugAdapter(oldPlug);  // 创建适配器
-        adapter.plugIn();  // 使用适配器插入旧插头
+        OldPlug oldPlug = new OldPlug();
+        PowerSocket adapter = new PlugAdapter(oldPlug);
+        adapter.plugIn();
     }
 }
 ```
@@ -192,54 +197,56 @@ UML
 
 <img src="https://pics.findfuns.org/Adaptor.png" alt="AdaptorUML" style="zoom:33%;" />
 
-#### 代理模式
+---
 
-代理模式简而言之就是在不改变原始接口的前提下，使用另一个接口对原始接口的功能进行扩展。
+#### Proxy Pattern
 
-下面是一个代理模式的示例代码
+The Proxy Pattern can be summarized as: extending the functionality of an original interface through an intermediary object, without modifying the original interface.
+
+Example:
 
 ```java
-// 原始接口
+// Original interface
 public interface Browser {
-  	void request();
+    void request();
 }
 ```
 
 ```java
-// 接口实现类
+// Concrete implementation
 public class BrowserImpl implements Browser {
-  	@Override
-  	public void request() {
-      	System.out.println("Sending Request....");
+    @Override
+    public void request() {
+        System.out.println("Sending Request....");
     }
 }
 ```
 
 ```java
-// 代理类
+// Proxy class
 public class Proxy implements Browser {
-  	private final Browser browser;
-  	
-  	public Proxy(BrowserImpl browser) {
-      	this.browser = browser;
+    private final Browser browser;
+
+    public Proxy(BrowserImpl browser) {
+        this.browser = browser;
     }
-  
-  	@Override
-  	public void request() {
-      	System.out.println("Proxy handling request....");
-      	browser.request();
+
+    @Override
+    public void request() {
+        System.out.println("Proxy handling request....");
+        browser.request();
     }
 }
 ```
 
 ```java
-// 客户端代码
+// Client code
 public class Client {
-  	public static void main(String[] args) {
-    		BrowserImpl browser = new BrowserImpl();
-      	Proxy proxy = new Proxy(browser);
-      	proxy.request();
-  	}
+    public static void main(String[] args) {
+        BrowserImpl browser = new BrowserImpl();
+        Proxy proxy = new Proxy(browser);
+        proxy.request();
+    }
 }
 ```
 
@@ -252,5 +259,3 @@ Sending Request....
 UML
 
 <img src="https://pics.findfuns.org/Proxy.png" alt="ProxyUML" style="zoom:33%;" />
-
-### 
